# vfp-lsp

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml  rustfmt.toml
.github/workflows/: ci.yml  release.yml
crates/vfp-lexer/: Cargo.toml
crates/vfp-lexer/examples/: lex_file.rs
crates/vfp-lexer/src/: cursor.rs  lib.rs  tests.rs  token.rs
crates/vfp-lsp/: Cargo.toml
crates/vfp-lsp/src/: backend.rs  capabilities.rs  document.rs  main.rs  workspace.rs
crates/vfp-parser/: Cargo.toml
crates/vfp-parser/src/: lib.rs
crates/vfp-syntax/: Cargo.toml
crates/vfp-syntax/src/: lib.rs  syntax_kind.rs
editors/neovim/: README.md
editors/neovim/ftdetect/: vfp.lua
editors/neovim/lua/vfp-lsp/: init.lua
editors/neovim/syntax/: vfp.vim
editors/vscode/: README.md  language-configuration.json  package-lock.json  package.json  vfp-lsp-0.1.0.vsix
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: vfp.tmLanguage.json
lua/vfp-lsp/: init.lua
syntax/: vfp.vim
test-fixtures/: preprocessor.prg  sample.prg  sql_examples.prg  test_code_actions.prg  test_format.prg
