[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Syntax
rowan = "0.15"

# LSP
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
dashmap = "6"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
smol_str = "0.2"
drop_bomb = "0.1"
text-size = "1.1"

# Internal crates
vfp-lexer = { path = "crates/vfp-lexer" }
vfp-syntax = { path = "crates/vfp-syntax" }
vfp-parser = { path = "crates/vfp-parser" }

[profile.release]
lto = true
codegen-units = 1
