[package]
name = "vfp-parser"
description = "Parser for Visual FoxPro"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
vfp-lexer = { workspace = true }
vfp-syntax = { workspace = true }
rowan = { workspace = true }
drop_bomb = { workspace = true }

[dev-dependencies]
expect-test = "1.5"
